# FastAi_Chat

fast_chat/: .coverage  chat.py  pyproject.toml  requirements.txt  schemas.py  testegit.py
fast_chat/tests/: test_chat.py
