[project]
name = "fast-chat"
version = "0.1.0"
description = ""
authors = [
    {name = "NLdouglas",email = "douglasleodoro.qi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13.*"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)"
]

[tool.poetry]
packages = [{include = "fast_chat", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
