[project]
name = "fast-chat"
version = "0.1.0"
description = ""
authors = [
    {name = "NLdouglas",email = "douglasleodoro.qi@gmail.com"}
]
readme = "README.md"

dependencies = [
    "fastapi (>=0.116.1,<0.117.0)"
]
[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.poetry.dependencies]
python = "3.13.*"

[tool.poetry]
packages = [{include = "fast_chat", from = "src"}]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.11"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
taskipy = "^1.14.1"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.ruff.lint]
preview = true 
select = [ 'I', 'F', 'E', 'W', 'PL', 'PT' ]

[tool.taskipy.tasks]
run = 'fastapi dev chat.py'
test = 'pytest -s -x --cov=/chat.py -vv'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
post_test = 'coverage html'


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
